# FLaA

./: CMakeLists.txt  README.md  main.cpp
docs/: re.ebnf
src/grammar/: CMakeLists.txt
src/grammar/structure/: parser_gr.cpp  parser_gr.h  scanner_gr.cpp  scanner_gr.h
src/regular/: CMakeLists.txt
src/regular/re-tree/: tree4re.cpp  tree4re.h  tree_creator.cpp  tree_creator.h
src/regular/structure/: parser_re.cpp  parser_re.h  scanner_re.cpp  scanner_re.h
src/tree/: CMakeLists.txt  tree.cpp  tree.h
tests/: grammar_example.txt  regular_brackets.txt  regular_example.txt  regular_simple.txt
